ignoreをためしてみて

--- a/dezero_nao/steps/sample.ipynb
+++ b/dezero_nao/steps/sample.ipynb
@@ -4,75 +4,23 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "class MyIterator:\n",
-    "    def __init__(self, max_cnt):\n",
-    "        self.max_cnt = max_cnt\n",
-    "        self.cnt = 0\n",
-    "\n",
-    "    def __iter__(self):\n",
-    "        return self\n",
-    "    \n",
-    "    def __next__(self):\n",
-    "        if self.cnt == self.max_cnt:\n",
-    "            raise StopIteration\n",
-    "\n",
-    "        self.cnt += 1\n",
-    "        return self.cnt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n"
+      "[1 2 3]\n"
      ]
     }
    ],
    "source": [
-    "obj = MyIterator(5)\n",
-    "for x in obj:\n",
-    "    print(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import numpy as np\n",
-    "a = np.array([[1, 2, 0], [2, 3, 4], [3, 4, 5]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 2, 2], dtype=int64)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.argmax(axis=1)"
+    "\n",
+    "x = np.array([1, 2, 3])\n",
+    "np.save('test.npy', x)\n",
+    "\n",
+    "x = np.load('test.npy')\n",
+    "print(x)"
    ]
   },
   {
@@ -85,10 +33,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "b0892b6aa06e378e83452b2827c77dabb42f60203bb51ef1a4a3f9409bcaf73f"
+   "hash": "bf78ad539898f6c1b91e27e91ced7c441245a851d0d82d49db83244c8e7e0e4a"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.1 64-bit",
+   "display_name": "Python 3.8.5 ('nao')",
    "language": "python",
    "name": "python3"
   },
@@ -102,7 +50,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.5"
   },
   "orig_nbformat": 4
  },
